localization signin line

--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -19,7 +19,8 @@
       },
       "link": {
          "logout": "Выйти",
-         "signup": "Регистрация"
+         "signup": "Регистрация",
+         "signin": "Войти"
       }
    },
    "signin": {
