update zh localization & this routes

--- a/src/localization/locales/zh.json
+++ b/src/localization/locales/zh.json
@@ -86,7 +86,7 @@
          "description": "所有表格字段必须用英文填写。如果违反了银行的主要要求，银行有权拒绝发行银行卡。标记为可选的字段由您自行决定填写。",
          "form": {
             "details": "身份证通常以文本，机器可读和电子形式包含有关持卡人的信息，包括其照片，姓名，个人号码，签名样本，电子芯片或磁条中记录的生物特征信息。",
-            "name": "你名字",
+            "name": "名称",
             "surname": "姓氏",
             "midlname": "中间名（可选）",
             "gender": "你的性别",
@@ -95,8 +95,8 @@
             "nationality": "国民隶属关系",
             "cell-code": "电话代码运营商代码",
             "cell-number": "电话号码",
-            "postcode": "指标",
-            "address": "地址",
+            "postcode": "邮政编码",
+            "address": "居住地址",
             "city": "城市名",
             "country": "国别",
             "submit": "继续"
