--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,182 +1,191 @@
 {
-   "header": {
-      "description": "Automatic Cross-Chain Settlement System",
-      "nav": {
-         "list": [
-            {
-               "title": "我的帐号",
-               "link": "account"
+    "header": {
+        "description": "Automatic Cross-Chain Settlement System",
+        "nav": {
+            "list": [
+                {
+                    "title": "我的帐号",
+                    "link": "account"
+                },
+                {
+                    "title": "KYC",
+                    "link": "profile"
+                },
+                {
+                    "title": "设置",
+                    "link": "settings"
+                }
+            ]
+        },
+        "link": {
+            "logout": "退出",
+            "signup": "注册",
+            "signin": "登入"
+        }
+    },
+    "signin": {
+        "title": "授权",
+        "description": "欢迎来到登录页面。 为了保护您的数据，请勿将信息传递给第三方，也不要将您的个人帐户密码泄露给任何人",
+        "form": {
+            "email": "输入电子邮件地址",
+            "password": "输入密码",
+            "submit": "继续"
+        }
+    },
+    "signup": {
+        "title": "注册",
+        "description": "每个字段都是必填的。 按表格要求仔细填写。 检查数据后，您可以登录到您的帐户。 为了保留您的数据，请勿与第三方共享信息，也不要将您的个人帐户密码泄露给任何人",
+        "form": {
+            "email": "输入电子邮件地址",
+            "password": "输入密码",
+            "password-confirm": "重新输入密码",
+            "submit": "继续"
+        }
+    },
+    "account": {
+        "title": "我的帐号",
+        "description": "欢迎登录您的个人帐户.ACSS项目是一种经济实惠的加密工具，具有最低的手续费，它可以执行完全安全的交易。 由于内部生态系统的存在，有绝佳的机会创建各种社会和金融机构，然后使用自己的分散式注册表对其进行管理。",
+        "details": "可用存储限额是您可以安全存储并在帐户上使用的储蓄额。 银行根据充值和提现的次数来设置安全的存储额度，这取决于客户不断使用资金的需求。",
+        "balance": "余额",
+        "card-number": "卡片",
+        "generate": "显示",
+        "limit": "最高存储限额",
+        "pin": "显示交易代码",
+        "top-up": "充值",
+        "transactions": "交易清单",
+        "comming": "开发中"
+    },
+    "transactions": {
+        "title": "汇款",
+        "description": "卡操作",
+        "amount": "金额",
+        "payment": "招商",
+        "period": "日期和时间"
+    },
+    "profile": {
+        "title": "KYC",
+        "terms": {
+            "title": "条款",
+            "d1": "我同意以任何方式（包括第三方）处理应用程序中指定的所有我的个人数据，包括复制，电子复制，去个性化，阻止，销毁，以及通过上述方式处理由此获得的我的其他个人数据 ",
+            "d2": "我同意银行的合作方处理我所有的个人数据，可供银行和/或银行的合作方使用，包括让我了解对方的服务，以及处理用户的信息和他们提供的通信服务（譬如银行的合作方是电信运营商)以评估我今后的支付能力从而决定是否发行信用卡",
+            "d3": "该同意书的有效期为15年，如果撤销该同意书，银行和/或第三方必须停止处理我的个人数据，并且销毁该数据的条件是终止本协议并在不迟于该日期起计的一年内全额偿还本协议项下的债务。 终止协议。",
+            "d4": "我同意从银行，其合作机构和分支机构接收广告，包括移动无线电话的信息和网络的邮件。",
+            "list": {
+                "t1": "与世界银行达成协议;",
+                "t2": "发行银行卡服务;",
+                "t3": "建立银行个人数据信息系统;",
+                "t4": "以及直接或间接与发行银行卡服务的银行，有权利向我提供关于世界银行和(或)其合作机构的新产品和服务的信息。"
             },
-            {
-               "title": "KYC",
-               "link": "profile"
-            },
-            {
-               "title": "设置",
-               "link": "settings"
+            "confirm": "同意这些条款",
+            "form": {
+                "submit": "继续"
             }
-         ]
-      },
-      "link": {
-         "logout": "退出",
-         "signup": "注册",
-         "signin": "登入"
-      }
-   },
-   "signin": {
-      "title": "授权",
-      "description": "欢迎来到登录页面。 为了保护您的数据，请勿将信息传递给第三方，也不要将您的个人帐户密码泄露给任何人",
-      "form": {
-         "email": "输入电子邮件地址",
-         "password": "输入密码",
-         "submit": "继续"
-      }
-   },
-   "signup": {
-      "title": "注册",
-      "description": "每个字段都是必填的。 按表格要求仔细填写。 检查数据后，您可以登录到您的帐户。 为了保留您的数据，请勿与第三方共享信息，也不要将您的个人帐户密码泄露给任何人",
-      "form": {
-         "email": "输入电子邮件地址",
-         "password": "输入密码",
-         "password-confirm": "重新输入密码",
-         "submit": "继续"
-      }
-   },
-   "account": {
-      "title": "我的帐号",
-      "description": "欢迎登录您的个人帐户.ACSS项目是一种经济实惠的加密工具，具有最低的手续费，它可以执行完全安全的交易。 由于内部生态系统的存在，有绝佳的机会创建各种社会和金融机构，然后使用自己的分散式注册表对其进行管理。",
-      "details": "可用存储限额是您可以安全存储并在帐户上使用的储蓄额。 银行根据充值和提现的次数来设置安全的存储额度，这取决于客户不断使用资金的需求。",
-      "balance": "余额",
-      "card-number": "卡片",
-      "generate": "显示",
-      "limit": "最高存储限额",
-      "pin": "显示交易代码",
-      "top-up": "充值",
-      "transactions": "交易清单",
-      "comming": "开发中"
-   },
-   "transactions": {
-      "title": "汇款",
-      "description": "卡操作",
-      "amount": "金额",
-      "payment": "招商",
-      "period": "日期和时间"
-   },
-   "profile": {
-      "title": "KYC",
-      "terms": {
-         "title": "条款",
-         "d1": "我同意以任何方式（包括第三方）处理应用程序中指定的所有我的个人数据，包括复制，电子复制，去个性化，阻止，销毁，以及通过上述方式处理由此获得的我的其他个人数据 ",
-         "d2": "我同意银行的合作方处理我所有的个人数据，可供银行和/或银行的合作方使用，包括让我了解对方的服务，以及处理用户的信息和他们提供的通信服务（譬如银行的合作方是电信运营商)以评估我今后的支付能力从而决定是否发行信用卡",
-         "d3": "该同意书的有效期为15年，如果撤销该同意书，银行和/或第三方必须停止处理我的个人数据，并且销毁该数据的条件是终止本协议并在不迟于该日期起计的一年内全额偿还本协议项下的债务。 终止协议。",
-         "d4": "我同意从银行，其合作机构和分支机构接收广告，包括移动无线电话的信息和网络的邮件。",
-         "list": {
-            "t1": "与世界银行达成协议;",
-            "t2": "发行银行卡服务;",
-            "t3": "建立银行个人数据信息系统;",
-            "t4": "以及直接或间接与发行银行卡服务的银行，有权利向我提供关于世界银行和(或)其合作机构的新产品和服务的信息。"
-         },
-         "confirm": "同意这些条款",
-         "form": {
-            "submit": "继续"
-         }
-      },
-      "information": {
-         "title": "基本信息",
-         "description": "所有表格字段必须用英文填写。如果违反了银行的主要要求，银行有权拒绝发行银行卡。标记为可选的字段由您自行决定填写。",
-         "form": {
-            "details": "身份证通常以文本，机器可读和电子形式包含有关持卡人的信息，包括其照片，姓名，个人号码，签名样本，电子芯片或磁条中记录的生物特征信息。",
-            "name": "名称",
-            "surname": "姓氏",
-            "midlname": "中间名（可选）",
-            "gender": "你的性别",
-            "occupation": "工作性质",
-            "date-of-birth": "出生日期",
-            "nationality": "国民隶属关系",
-            "cell-code": "电话代码运营商代码",
-            "cell-number": "电话号码",
-            "postcode": "邮政编码",
-            "address": "居住地址",
-            "city": "城市名",
-            "country": "国别",
-            "submit": "继续"
-         },
-         "gender": {
-            "male": "男",
-            "female": "女"
-         },
-         "occupation": [
-            { "value": "001", "title": "公务员" },
-            {
-               "value": "002",
-               "title": "金融投资经纪人/保险经纪人"
+        },
+        "personalinfo": "个人资料",
+        "contactinfo": "联络资料",
+        "addressinfo": "报名地址",
+        "idinfo": "身份证/护照",
+        "information": {
+            "title": "基本信息",
+            "description": "所有表格字段必须用英文填写。如果违反了银行的主要要求，银行有权拒绝发行银行卡。标记为可选的字段由您自行决定填写。",
+            "form": {
+                "details": "身份证通常以文本，机器可读和电子形式包含有关持卡人的信息，包括其照片，姓名，个人号码，签名样本，电子芯片或磁条中记录的生物特征信息。",
+                "localname": "名字",
+                "locallastname": "姓氏",
+                "name": "名称",
+                "surname": "姓氏",
+                "midlname": "中间名（可选）",
+                "gender": "你的性别",
+                "occupation": "工作性质",
+                "date-of-birth": "出生日期",
+                "nationality": "国民隶属关系",
+                "cell-code": "电话代码运营商代码",
+                "cell-number": "电话号码",
+                "postcode": "邮政编码",
+                "address": "居住地址",
+                "city": "城市名",
+                "country": "国别",
+                "submit": "继续"
             },
-            { "value": "003", "title": "房地产经纪人" },
-            { "value": "004", "title": "律师/法律顾问" },
-            {
-               "value": "005",
-               "title": "会计师/首席财务官"
+            "gender": {
+                "male": "男",
+                "female": "女"
             },
-            {
-               "value": "006",
-               "title": "医生/助理医护人员"
-            },
-            { "value": "007", "title": "建筑/工程人员" },
-            { "value": "008", "title": "警务人员" },
-            { "value": "009", "title": "收银员" },
-            { "value": "010", "title": "卖方/商店经理" },
-            { "value": "011", "title": "专科医师" },
-            {
-               "value": "012",
-               "title": "社会和咨询工作者"
-            },
-            { "value": "013", "title": "教育家" },
-            { "value": "014", "title": "主厨" },
-            { "value": "015", "title": "设计师" },
-            { "value": "017", "title": "保安人员" },
-            { "value": "018", "title": "主管" },
-            { "value": "019", "title": "管理/文职人员" },
-            { "value": "020", "title": "蓝领/工人阶级" },
-            { "value": "021", "title": "服务员" },
-            { "value": "022", "title": "家庭主妇或女佣" },
-            { "value": "023", "title": "学生" },
-            { "value": "024", "title": "待业" },
-            {
-               "value": "025",
-               "title": "雇主/私人企业家"
-            },
-            { "value": "026", "title": "老年人" }
-         ]
-      },
-      "passport": {
-         "title": "护照",
-         "description": "中华人民共和国公民的护照，是发给在中国大陆注册的中国公民的官方文件，以验证其身份和出国旅行。",
-         "form": {
-            "id-front": "卡正面的照片",
-            "id-back": "卡背面的照片",
-            "id-selfie": "身份证或护照的自拍照照片",
-            "signature": "在A4纸上签名的照片",
-            "details": "请上传您的身份证件图片。确保可以看到整个文档，包括边缘和角落。如果您的图像不符合这些要求，则您的申请将被拒绝。",
-            "pid-number": "身份证号码",
-            "poa-number": "护照号码（可选）",
-            "back": "回去",
-            "submit": "提交"
-         }
-      }
-   },
-   "settings": {
-      "title": "设置",
-      "description": "更改帐户设置时请多加注意。 建议使用高级别的密码以保证数据的安全性，您的帐户安全将取决于此。 妥善保管您的数据，请勿将信息传输给第三方，也不要告诉任何人您的个人帐户的旧密码和新密码",
-      "form": {
-         "email": "输入电子邮件地址",
-         "name": "您的名字",
-         "password": "输入密码",
-         "password-confirm": "重新输入密码",
-         "surname": "姓",
-         "submit": "保存"
-      }
-   },
-   "footer": {
-      "description": "© 2019 Automatic Cross-Chain Settlement System"
-   }
+            "occupation": [
+                { "value": "001", "title": "公务员" },
+                {
+                    "value": "002",
+                    "title": "金融投资经纪人/保险经纪人"
+                },
+                { "value": "003", "title": "房地产经纪人" },
+                { "value": "004", "title": "律师/法律顾问" },
+                {
+                    "value": "005",
+                    "title": "会计师/首席财务官"
+                },
+                {
+                    "value": "006",
+                    "title": "医生/助理医护人员"
+                },
+                { "value": "007", "title": "建筑/工程人员" },
+                { "value": "008", "title": "警务人员" },
+                { "value": "009", "title": "收银员" },
+                { "value": "010", "title": "卖方/商店经理" },
+                { "value": "011", "title": "专科医师" },
+                {
+                    "value": "012",
+                    "title": "社会和咨询工作者"
+                },
+                { "value": "013", "title": "教育家" },
+                { "value": "014", "title": "主厨" },
+                { "value": "015", "title": "设计师" },
+                { "value": "017", "title": "保安人员" },
+                { "value": "018", "title": "主管" },
+                { "value": "019", "title": "管理/文职人员" },
+                { "value": "020", "title": "蓝领/工人阶级" },
+                { "value": "021", "title": "服务员" },
+                { "value": "022", "title": "家庭主妇或女佣" },
+                { "value": "023", "title": "学生" },
+                { "value": "024", "title": "待业" },
+                {
+                    "value": "025",
+                    "title": "雇主/私人企业家"
+                },
+                { "value": "026", "title": "老年人" }
+            ]
+        },
+        "passport": {
+            "title": "护照",
+            "description": "中华人民共和国公民的护照，是发给在中国大陆注册的中国公民的官方文件，以验证其身份和出国旅行。",
+            "form": {
+                "id-front": "卡正面的照片",
+                "id-back": "卡背面的照片",
+                "id-selfie": "身份证或护照的自拍照照片",
+                "signature": "在A4纸上签名的照片",
+                "details": "请上传您的身份证件图片。确保可以看到整个文档，包括边缘和角落。如果您的图像不符合这些要求，则您的申请将被拒绝。",
+                "pid-number": "身份证号码",
+                "poa-number": "护照号码（可选）",
+                "back": "回去",
+                "submit": "提交"
+            }
+        }
+    },
+    "settings": {
+        "title": "设置",
+        "description": "更改帐户设置时请多加注意。 建议使用高级别的密码以保证数据的安全性，您的帐户安全将取决于此。 妥善保管您的数据，请勿将信息传输给第三方，也不要告诉任何人您的个人帐户的旧密码和新密码",
+        "form": {
+            "email": "输入电子邮件地址",
+            "name": "您的名字",
+            "password": "输入密码",
+            "password-confirm": "重新输入密码",
+            "surname": "姓",
+            "submit": "保存"
+        }
+    },
+    "footer": {
+        "description": "© 2019 Automatic Cross-Chain Settlement System"
+    },
+    "404": {
+        "description": "找不到页面。"
+    }
 }
