--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -44,7 +44,7 @@
     },
     "account": {
         "title": "Мой аккаунт",
-        "description": "Добро пожаловать в личный кабинет. Проект ACSS является доступным крипто инструментом, имеющим самые минимальные комиссии, он осуществляет полностью безопасные транзакции. Благодаря внутренней экосистеме есть отличная возможность создавать разные социальные и финансовые учреждения, а затем управлять ими при помощи собственного децентрализованного реестра.",
+        "description": "Проект ACSS является доступным крипто инструментом, имеющим самые минимальные комиссии, он осуществляет полностью безопасные транзакции. Благодаря внутренней экосистеме есть отличная возможность создавать разные социальные и финансовые учреждения, а затем управлять ими при помощи собственного децентрализованного реестра.",
         "details": "Доступный лимит хранения - это то колличество сбережений, которое вы можете безопасно хранить и использовать на своем счету. Безопасный лимит хранения устанавливает банк в зависимости от колличества пополнений и снятия наличных средств, в зависимости от потребности клиента в постоянном использовании средств.",
         "balance": "Баланс",
         "card-number": "Карта",
@@ -53,7 +53,9 @@
         "pin": "Показать Пин-код",
         "top-up": "Пополнить",
         "transactions": "Список транзакций",
-        "comming": "В разработке"
+        "comming": "В разработке",
+        "cardsuccess": "Теперь вы можете привязать вашу карту",
+        "snap": "Привязать карту"
     },
     "transactions": {
         "title": "Переводы",
@@ -165,7 +167,7 @@
             "description": "Паспорт гражданина Китайской Народной Республики, официальный документ выдаваемый гражданам КНР, зарегистрированных как жители материкового Китая, для удостоверения их личности и для поездок за границу.",
             "form": {
                 "id-front": "Фотография лицевой стороны карты",
-                "id-back": "Обратная стороны карты",
+                "id-back": "Обратная сторона карты",
                 "id-selfie": "Селфи с ID-картой",
                 "signature": "Ваша подпись",
                 "details": "Пожалуйста, загрузите изображение вашего документа, удостоверяющего личность. Убедитесь, что весь документ можно увидеть, включая края и углы. Если ваше изображение не соответствует этим требованиям, ваша заявка будет отклонена.",
@@ -193,5 +195,8 @@
     },
     "404": {
         "description": "Страница не найдена."
+    },
+    "success": {
+        "description": "Данные успешно отправлены"
     }
 }
